# learning_dbt

./: pyproject.toml
learning_dbt_practice/: .gitignore  dbt_project.yml
learning_dbt_practice/models/staging/flights/: _flights__docs.md  _flights__sources.yml  stg_flights__aircrafts.sql  stg_flights__airports.sql  stg_flights__seats.sql
